@@ -7,7 +7,7 @@ var utils = require('./utils');
 module.exports = function (app) {
   function contentLength(env, callback) {
     app(env, function (status, headers, body) {
-      if (!('Content-Length' in headers) && !headers['Transfer-Encoding'] && !utils.emptyBody(status)) {
+      if (!('Content-Length' in headers) && !headers['Transfer-Encoding'] && !utils.isEmptyBodyStatus(status)) {
         if (typeof body === 'string') {
           headers['Content-Length'] = String(Buffer.byteLength(body));
         } else if (typeof body.length === 'number') {
