@@ -317,7 +317,7 @@ function call(app, env, callback) {
   }
 
   function handleResponse(status, headers, body) {
-    if (env.requestMethod === 'HEAD' || utils.emptyBody(status)) {
+    if (env.requestMethod === 'HEAD' || utils.isEmptyBodyStatus(status)) {
       headers['Content-Length'] = '0';
       body = '';
     } else if (typeof body !== 'string' && !headers['Content-Length']) {
