@@ -37,7 +37,7 @@ Response.prototype.__defineGetter__('empty', function () {
     return true;
   }
 
-  return utils.emptyBody(this.status);
+  return utils.isEmptyBodyStatus(this.status);
 });
 
 /**
