@@ -1,7 +1,7 @@
 var http = require('http');
 var urlMap = require('./urlmap');
 
-exports.emptyBody = emptyBody;
+exports.isEmptyBodyStatus = isEmptyBodyStatus;
 exports.canonicalHeaderName = canonicalHeaderName;
 exports.capitalizedHeaderName = capitalizedHeaderName;
 exports.propertyName = propertyName;
@@ -46,7 +46,7 @@ exports.STATUS_WITH_NO_ENTITY_BODY = [100, 101, 204, 304];
  * Returns true if the given status code indicates a response that MUST NOT
  * have any content in the body.
  */
-function emptyBody(status) {
+function isEmptyBodyStatus(status) {
   return exports.STATUS_WITH_NO_ENTITY_BODY.indexOf(status) !== -1;
 }
 
